Week-03/css/styles.css
header{
    position: fixed;
    width: 1512px;
    height: 98px;
    line-height: 98px;
    background-color: #373867;
    top: 0;
}

aside{
    position: fixed;
    top: 98px;
    background-color: #AACE9B;
    width: 313px;
    height: 100%;
    float: left;

}

nav a{
    background-color: white;
    display: block;
    width: 263px;
    height: 37.69px;
    margin: auto;
    margin-top: 15px;
    text-align: center;
    line-height: 37.69px;
    border: 1.5px solid #373867;
    border-radius: 5px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 876;
    font-size: 20px;
    color: #373867;
    
}

main{
    margin-top: 160px;
    margin-left: 413px;
    margin-right: 50px;
}

h1{
    font-family: Roboto;
    font-size: 40px;
    font-weight: 700;
    line-height: 47px;
    letter-spacing: 0em;
    text-align: center;
    margin-top: 60px;
    margin-bottom: 0;
    padding: 0;
    color: #373867;
}

h2{
    margin-bottom: 50px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    font-size: 30px;
    line-height: 35px;
    color: #373867;
    text-align: center;
}

h3{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 876;
    font-size: 24px;
    line-height: 28px;
    text-transform: capitalize;
    color: #373867;
}

p{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    color:#373867
}

section{
    margin-top: 60px;
    clear: both
}

form{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 16px;
    color: #373867;
}

label{
    margin-bottom: 10px;
}

table{
    width: 981.55px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 100%;
    display: flex;
    align-items: center;
    color: #373867;
    text-align: center;
    border-collapse: collapse;
}

td, th{
    padding: 20px;
}
tr:nth-child(odd) {background-color: #f2f2f2;}
th{
    background-color: #f2f2f2;
    
}

.custom-table{
    width: 130px
}

.custom-table-1{
    width: 450px;
}
footer{
    height: 72px;
    text-align: center;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
    background-color:#AACE9B;
}

footer ul li{
    display: inline-block;
    padding-left: 10px;
    margin-top: 10px;
}

footer p{
    color: white;
}
#logo{
    vertical-align: middle;
    width: 194px;
    height: 41px;
    margin-left: 29px;
}

.contact-info{
    position: relative;
    margin-top: 450px;
}

.contact-info h3{
    position: relative;
    
    margin-bottom: 40px;
    font-family: Roboto;
    font-size: 20px;
    font-weight: 876;
    line-height: 23px;
    letter-spacing: 0em;
    text-align: center;
    font-variation-settings: 'wdth' 100;
    text-decoration: underline;
    color: white
}

.contact-info ul{
    font-family: Roboto;
    font-size: 20px;
    font-weight: 400;
    line-height: 23px;
    letter-spacing: 0em;
    text-align: left;
    color: #373867;

}

.contact-info ul img{
    
    margin-left: 20px;
    margin-right: 10px;
    width: 15px;
    height: 15px;
}

#icon-phone{
    transform:perspective(-45);
    width: 20px;
    height: 20px;
}

.contact-info ul li{
    margin-top: 20px;
}

#section-welcome div{
    width: 500px;
    float: left;
    text-align: center;
}

#section-welcome div p{
    margin-top: 30px;
}


#section-welcome img{
    
    float: left;
    margin-bottom: 60px;
}

#welcome{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    margin-top:0px;
    color: #49A37B;
    
}

#section-features{
    margin-bottom: 500px;
}

#section-features h3{
    width: 500px;
    margin-bottom: 25px;
    transform: translateX(-50px);
}

#section-features h3 img{
    transform: translateY(10px);
}

#section-features .column-1, .column-2{
    width: 350px;
    margin-left: 60px;
    float: left;
}

#section-features .column-2{
    margin-left: 230px;
}

#section-features article{
    margin-top: 30px;

}

.row-2{
    clear: both;
    margin-top: 300px;
    margin-bottom: 550px;
}

.row-1{
    margin-top: 60px;
}

.row-1 img {
    float:left
    
}

.row-1 p {
    margin-left: 10px;
    margin-top: 20px;
    text-align: right;
    width: 550px;
    float:left
}

.row-2 img {
    float: left
    
}

.row-2 p {
    margin-right: 10px;
    margin-top: 20px;
    width: 550px;
    float: left
}

.form-column-1 *, .form-column-2 *{
    display: block;
    width: 100%;
}

.form-column-1, .form-column-2{
    float: left
}

.form-column-1{
    position: relative;
    left: 100px;
    width: 260px;
    
}

.form-column-2{
    position: relative;
    width: 566px;
    left: 170px;
}

input, select{
    box-sizing:border-box;
    border: 1px solid #373867;
    border-radius: 4px;
    height: 37px;
    margin-bottom: 25px;
}

input::placeholder{
    padding-left: 10px;
    color: #373867;
    opacity: 0.5;
}

#message{
    height: 191.6px;
    border: 1px solid #373867;
    border-radius: 4px;
}

#message::placeholder{
    padding-left: 10px;
    padding-top: 10px;
    color: #373867;
    opacity: 0.5;
}

#submit{
    width: 123px;
    height: 47px;
    background: #AACE9B;
    border-radius: 5px;
    border: none;
    color: #373867;
}

.list-activities{
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 876;
    font-size: 24px;
    line-height: 28px;
    text-transform: capitalize;
    color: #373867;
    margin-left: 50px;
    float: left;
    margin-left: 120px;
    margin-top: 30px;
    margin-bottom: 20px;
}

.list-activities li{
    padding-bottom: 10px;
}

#section-activities img{
    margin-left: 150px;
}

